# Fast_Connect4_Minimax

./: .gitignore  C4_game_engine.c  C4_game_engine.h  CMakeLists.txt  colours.h  main.c
include/: colours.h
